--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HU Heardle</title>
   <meta name="description" content="Guess the Hollywood Undead song from the intro in as few tries as possible.">
-  <meta itemprop="name" content="HU Heardle - That daily HU song intros game">
+  <meta itemprop="name" content="HU Heardle - A daily music-based game">
   <meta itemprop="description" content="Guess the Hollywood Undead song from the intro in as few tries as possible.">
   <meta itemprop="image" content="https://cdn.glitch.global/a387fcca-e7f0-46fe-9aeb-bac54fc63f62/2fgd.png?v=1719204963077">
   <meta property="og:url" content="https://hu-heardle.glitch.me/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="HU Heardle">
-  <meta property="og:description" content="Guess the Hollywood Undead song from the intro in as few tries as possible.">
+  <meta property="og:title" content="Hollywood Undead Heardle">
+  <meta property="og:description" content="A fanmade song guessing game using music by Hollywood Undead!">
   <meta property="og:image" content="https://cdn.glitch.global/a387fcca-e7f0-46fe-9aeb-bac54fc63f62/2fgd.png?v=1719204963077">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="HU Heardle">
-  <meta name="twitter:description" content="Guess the Hollywood Undead song from the intro in as few tries as possible.">
+  <meta name="twitter:title" content="Hollywood Undead Heardle">
+  <meta name="twitter:description" content="A fanmade song guessing game using music by Hollywood Undead!">
   <meta name="twitter:image" content="https://cdn.glitch.global/a387fcca-e7f0-46fe-9aeb-bac54fc63f62/2fgd.png?v=1719204963077">  
   
   
