--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Hollywood Undead Heardle">
   <meta property="og:description" content="A fanmade song guessing game using music by Hollywood Undead!">
-  <meta property="og:image" content="https://cdn.glitch.global/a387fcca-e7f0-46fe-9aeb-bac54fc63f62/2fgd.png?v=1719204963077">
+  <meta property="og:image" content="https://file.garden/ZYErBm2nsi-rTFy8/image_2025-06-23_044244039.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Hollywood Undead Heardle">
   <meta name="twitter:description" content="A fanmade song guessing game using music by Hollywood Undead!">
-  <meta name="twitter:image" content="https://cdn.glitch.global/a387fcca-e7f0-46fe-9aeb-bac54fc63f62/2fgd.png?v=1719204963077">  
+  <meta name="twitter:image" content="https://file.garden/ZYErBm2nsi-rTFy8/image_2025-06-23_044244039.png">  
   
   
 	<link rel="icon" type="image/png" href="https://cdn.glitch.global/a387fcca-e7f0-46fe-9aeb-bac54fc63f62/2fgd.png?v=1719204963077">
